# TensorRT-Inference

./: App.qml  CMakeLists.txt  Main.qml  README.md  appdef.h  appvm.cpp  appvm.h  inferenceservice.h  inferencethread.cpp  inferencethread.h  main.cpp  tensorRTLogger.h  threadservice.cpp  threadservice.h  utility.cpp  utility.h
